# rusty

./: README.md
Strings/src/: main.rs
auth_service/: Cargo.toml
auth_service/src/: auth_utils.rs  lib.rs  main.rs
bank/src/: lib.rs
bank/tests/: savings_account.rs
bank/tests/utils/: mod.rs
calculator/src/: main.rs
collections/src/: main.rs  maps.rs  vecs.rs
generics/src/: main.rs
guessing_game/src/: main.rs
imd/: Cargo.toml
imd/src/: main.rs
iterators/src/: funcs.rs  iterator.rs  main.rs
lifetimes/src/: main.rs
multi_threading/src/: main.rs
practice/borrowing/src/: main.rs
practice/common_concepts/src/: control_flow.rs  main.rs
practice/enumerations/: a.txt
practice/enumerations/src/: main.rs  options.rs  result.rs
practice/ownership/src/: functions.rs  main.rs  references.rs  slice.rs
practice/package_management/src/: main.rs
practice/structures/src/: main.rs  tuple_struct.rs  user.rs
simple_structs/: Cargo.toml
simple_structs/src/: main.rs  rectangles.rs
traits/src/: main.rs
workspace/: Cargo.toml
workspace/blog_shared/: Cargo.toml
